<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_height"
        android:inputType="number"
        android:minHeight="56dp"
        android:textColor="@color/black"
        android:textColorHint="#AAAAAA"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/widthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_width"
        android:inputType="number"
        android:minHeight="56dp"
        android:textColor="@color/black"
        android:textColorHint="#AAAAAA"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_cancel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FBC02D"
            android:text="@string/cancel"
            android:textColor="#1E1E1E"
            android:textSize="21sp"
            android:padding="12dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/btn_ok1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FBC02D"
            android:text="@string/ok"
            android:textColor="#1E1E1E"
            android:textSize="21sp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>
