<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:id="@+id/rename_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rename_drawing"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FBC02D"
            android:text="@string/cancel"
            android:textColor="#1E1E1E"
            android:textSize="21sp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#FBC02D"
            android:text="@string/ok"
            android:textColor="#1E1E1E"
            android:textSize="21sp" />
    </LinearLayout>

</LinearLayout>
